# testdatagen

./: .gitignore  LICENSE  README.md  grammar_loader.py  package.json  pyproject.toml  requirements.txt  validation.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
examples/: example.tdata  example.tdg
syntaxes/: testdatagen.tmLanguage.json
testdatagen/: cli.py  log_config.py
testdatagen/generators/: faker_integration.py  json_generator.py  report_generator.py  sql_generator.py
testdatagen/grammar/: testdatagen.tx
testdatagen/strategies/: boundary.py  combination.py  edge_cases.py  partition.py
tests/: grammar_test.py  test_boundary.py  test_cli.py  test_combination_each_used.py  test_combination_full.py  test_combination_pairwise.py  test_constraints.py  test_edge_cases.py  test_entities_and_refs.py  test_faker_integration.py  test_field_types.py  test_json_generator.py  test_parsing.py  test_partition.py  test_report_generator.py  test_sql_generator.py
