[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testdatagen"
version = "0.1.0"
description = "Domain-specific language project built with textX"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Spasoje Brboric" },
    { name = "Luka Milanko" },
    { name = "Luka Zelovic" },
    { name = "Milica Djumic" },
]
dependencies = [
    "textX>=3.0",
    "Faker>=18.0",
    "Jinja2>=3.0",
    "Click>=8.0"
]

[project.scripts]
testdatagen = "testdatagen.cli:main"

[tool.setuptools]
package-dir = {"" = "testdatagen"}

[tool.setuptools.packages.find]
where = ["testdatagen"]